Начало разработки контейнеров

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,26 +11,29 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!--хедер-->
  <header class="header">
-      <nav class="navigation ">
-        <!--Navigation-->
-        <a href="./index.html" class="logo-first link">
-          WEB <span class="logo-second">STUDIO</span>
-        </a>
-
-        <ul class="navigation-list list  ">
-          <li class="navigation-item">
-            <a href="./index.html" class="navigation-link link">Studio</a></li>
-          <li class="navigation-item">
-            <a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
-          <li class="navigation-item">
-            <a href="" class="navigation-link link">Contacts</a></li>
-        </ul>
-      </nav>
+     <div class="container">
+        <nav class="navigation ">
+          <!--Navigation-->
+          <a href="./index.html" class="logo-first link">
+            WEB <span class="logo-second">STUDIO</span>
+          </a>
+  
+          <ul class="navigation-list list  ">
+            <li class="navigation-item">
+              <a href="./index.html" class="navigation-link link">Studio</a></li>
+            <li class="navigation-item">
+              <a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
+            <li class="navigation-item">
+              <a href="" class="navigation-link link">Contacts</a></li>
+          </ul>
+        </nav>
+     </div>
       <ul class="contacts list ">
         <li class="navigation-contacts ">
           <a href="mailto:info@devstudio.com" class="contact-adress link">info@devstudio.com</a>
