--- a/index.html
+++ b/index.html
@@ -44,37 +44,40 @@
             </li>
           </ul>
         </nav>
+
+        <ul class="contacts list">
+          <li class="navigation-contacts">
+            <a href="mailto:info@devstudio.com" class="contact-adress link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="navigation-contacts">
+            <a href="tel:+11000111-11-11" class="contact-adress link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
       </div>
-      <ul class="contacts list">
-        <li class="navigation-contacts">
-          <a href="mailto:info@devstudio.com" class="contact-adress link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="navigation-contacts">
-          <a href="tel:+11000111-11-11" class="contact-adress link"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
     </header>
 
     <main class="hero">
       <!--Головна-->
       <section class="hero-main">
-        <h1 class="hero-text">
-          Effective Solutions
-          <!--</br>-->
-          for Your Business
-        </h1>
-        <button type="button" class="hero-buttom">Order Service</button>
+        <div class="">
+          <h1 class="hero-text">
+            Effective Solutions
+            <!--</br>-->
+            for Your Business
+          </h1>
+          <button type="button" class="hero-buttom">Order Service</button>
+        </div>
       </section>
 
       <!--Типи технологій-->
       <section class="tehnology">
         <div class="container">
-          <!--<h2 class="tehhology-maintext">Tipe of technologi</h2>
-          hidden h2-->
+          <h2 class="tehhology-maintext" hidden>Tipe of technologi</h2>
+
           <ul class="tehnology-list list">
             <li class="tehnology-item">
               <h3 class="tehnology-text">Strategy</h3>
@@ -83,6 +86,21 @@
                 the perfect and creative solution.
               </p>
             </li>
+            <li class="tehnology-item">
+              <h3 class="tehnology-text">Punctuality</h3>
+              <p class="tehnology-paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="tehnology-item">
+              <h3 class="tehnology-text">Diligence</h3>
+              <p class="tehnology-paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+
             <li class="tehnology-item">
               <h3 class="tehnology-text">Technologies</h3>
               <p class="tehnology-paragraph">
@@ -172,14 +190,16 @@
 
     <!-- футер-->
     <footer class="footer">
-      <a href="./index.html" class="logo-footer-first link">
-        WEB <span class="logo-footer-second link">Studio</span>
-      </a>
+      <div class="container">
+        <a href="./index.html" class="logo-footer-first link">
+          WEB <span class="logo-footer-second link">Studio</span>
+        </a>
 
-      <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="footer-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
