--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main class="hero">
       <!--Головна-->
       <section class="hero-main">
-        <div class="">
+        <div class="container">
           <h1 class="hero-text">
             Effective Solutions
             <!--</br>-->
