--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!--хедер-->
     <header class="header">
-      <div class="container-nav">
+      <div class="container main-nav">
         <nav class="navigation">
           <!--Navigation-->
           <a href="./index.html" class="logo-first link">
