--- a/portfolio.html
+++ b/portfolio.html
@@ -15,35 +15,45 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!--хедер-->
- <header class="header">
-     <div class="container">
-        <nav class="navigation ">
+  <!--хедер-->
+    <header class="header">
+      <div class="container main-nav">
+        <nav class="navigation">
           <!--Navigation-->
           <a href="./index.html" class="logo-first link">
             WEB <span class="logo-second">STUDIO</span>
           </a>
-  
-          <ul class="navigation-list list  ">
+
+          <ul class="navigation-list list">
             <li class="navigation-item">
-              <a href="./index.html" class="navigation-link link">Studio</a></li>
+              <a href="./index.html" class="navigation-link link">Studio</a>
+            </li>
             <li class="navigation-item">
-              <a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
+              <a href="./portfolio.html" class="navigation-link link"
+                >Portfolio</a
+              >
+            </li>
             <li class="navigation-item">
-              <a href="" class="navigation-link link">Contacts</a></li>
+              <a href="" class="navigation-link link">Contacts</a>
+            </li>
           </ul>
         </nav>
-     
-      <ul class="contacts list ">
-        <li class="navigation-contacts ">
-          <a href="mailto:info@devstudio.com" class="contact-adress link">info@devstudio.com</a>
-        </li>
-        <li class="navigation-contacts" >
-          <a href="tel:+11000111-11-11" class="contact-adress link">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
-    </div>
+
+        <ul class="contacts list">
+          <li class="navigation-contacts">
+            <a href="mailto:info@devstudio.com" class="contact-adress link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="navigation-contacts">
+            <a href="tel:+11000111-11-11" class="contact-adress link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
+
 
     <main class="portfolio-hero">
 
@@ -65,7 +75,7 @@
               <button type="button" class="portfolio-buttom">Design</button>
             </li>
             <li class="portfolio-navigation-item">
-              <button type="button" class="portfolio-buttom">Marketinge</button>
+              <button type="button" class="portfolio-buttom">Marketing</button>
             </li>
           </ul>
         
@@ -154,10 +164,10 @@
         <a href="./index.html" class="logo-footer-first link">
           WEB <span class="logo-footer-second link">Studio</span>
         </a>
-  
+
         <p class="footer-paragraph">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
       </div>
     </footer>
