Зробила перші зміни

--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
       <!--Головна-->
       <section class="hero-main">
         <div class="container">
-          <h1 class="hero-text">
-            Effective Solutions
-            <!--</br>-->
-            for Your Business
-          </h1>
+          <h1 class="hero-text">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-buttom">Order Service</button>
         </div>
       </section>
@@ -155,9 +151,10 @@
                 alt="Product Designer"
                 width="264"
               />
-
-              <h3 class="about-text">Mark Guerrero</h3>
-              <p class="about-paragraph">Product Desinger</p>
+              <div class="card">
+                <h3 class="about-text">Mark Guerrero</h3>
+                <p class="about-paragraph">Product Desinger</p>
+              </div>
             </li>
             <li class="about-item">
               <img
@@ -165,14 +162,18 @@
                 alt="Frontend Developer"
                 width="264"
               />
-              <h3 class="about-text">Tom Ford</h3>
-              <p class="about-paragraph">Frontend Developer</p>
+              <div class="card">
+                <h3 class="about-text">Tom Ford</h3>
+                <p class="about-paragraph">Frontend Developer</p>
+              </div>
             </li>
             <li class="about-item">
               <img src="./images/marketing.jpg" alt="Marketing" width="264" />
 
-              <h3 class="about-text">Camila Garsia</h3>
-              <p class="about-paragraph">Marketing</p>
+              <div class="card">
+                <h3 class="about-text">Camila Garsia</h3>
+                <p class="about-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="about-item">
               <img
@@ -180,8 +181,10 @@
                 alt="UI Designer"
                 width="264"
               />
-              <h3 class="about-text">Daniel Wilson</h3>
-              <p class="about-paragraph">UI Desinger</p>
+              <div class="card">
+                <h3 class="about-text">Daniel Wilson</h3>
+                <p class="about-paragraph">UI Desinger</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -192,7 +195,7 @@
     <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo-footer-first link">
-          WEB <span class="logo-footer-second link">Studio</span>
+          WEB<span class="logo-footer-second link">Studio</span>
         </a>
 
         <p class="footer-paragraph">
