--- a/portfolio.html
+++ b/portfolio.html
@@ -82,29 +82,30 @@
             <li class="app-item">
               <a href="" class="app-link link">
                 <img src="./images/bankingapp.jpg" alt="banks app" />
-                <h2 class="app-maintext ">Banking App Interface Concept</h2>
+                <div class="shadow"><h2 class="app-maintext ">Banking App Interface Concept</h2>
                  <p class="app-paragraph">App</p>
+                </div>
               </a>
             </li>
             <li class="app-item">
               <a href="" class="app-link link">
                 <img src="./images/cashless.jpg" alt="cashless payment" />
-                <h2 class="app-maintext">Cashless Payment</h2>
-                <p class="app-paragraph">Marketing</p>
+                <div class="shadow"><h2 class="app-maintext">Cashless Payment</h2>
+                <p class="app-paragraph">Marketing</p></div>
               </a>
             </li>
             <li class="app-item">
               <a href="" class="app-link link">
                 <img src="./images/meditationapp.jpg" alt="meditation app" />
-                <h2 class="app-maintext">Meditaion App</h2>
-                <p class="app-paragraph">App</p>
+                <div class="shadow"><h2 class="app-maintext">Meditaion App</h2>
+                <p class="app-paragraph">App</p></div>
               </a>
             </li>
             <li class="app-item">
               <a href="" class="app-link link">
                 <img src="./images/taxiservice.jpg" alt="Taxi Service" />
-                <h2 class="app-maintext">Taxi Service</h2>
-                <p class="app-paragraph">Marketing</p>
+                <div class="shadow"><h2 class="app-maintext">Taxi Service</h2>
+                <p class="app-paragraph">Marketing</p></div>
               </a>
             </li>
             <li class="app-item">
@@ -113,15 +114,15 @@
                   src="./images/screenillustration.jpg"
                   alt="Screen Illustrations"
                 />
-                <h2 class="app-maintext">Screen Illustrations</h2>
-                <p class="app-paragraph">Design</p>
+                <div class="shadow"><h2 class="app-maintext">Screen Illustrations</h2>
+                <p class="app-paragraph">Design</p></div>
               </a>
             </li>
             <li class="app-item">
               <a href="" class="app-link link">
                 <img src="./images/onlinecourses.jpg" alt="Online Courses" />
-                <h2 class="app-maintext">Online Courses</h2>
-                <p class="app-paragraph">Marketing</p>
+                <div class="shadow"><h2 class="app-maintext">Online Courses</h2>
+                <p class="app-paragraph">Marketing</p></div>
               </a>
             </li>
             <li class="app-item">
@@ -130,22 +131,22 @@
                   src="./images/inststories.jpg"
                   alt="Instagram Stories Concept"
                 />
-                <h2 class="app-maintext">Instagram Stories Concept</h2>
-                <p class="app-paragraph">Design</p>
+                <div class="shadow"><h2 class="app-maintext">Instagram Stories Concept</h2>
+                <p class="app-paragraph">Design</p></div>
               </a>
             </li>
             <li class="app-item">
               <a href="" class="app-link link">
                 <img src="./images/organicfood.jpg" alt="Organic Food" />
-                <h2 class="app-maintext">Organic Food</h2>
-                <p class="app-paragraph">Web Site</p>
+                <div class="shadow"><h2 class="app-maintext">Organic Food</h2>
+                <p class="app-paragraph">Web Site</p></div>
               </a>
             </li>
             <li class="app-item">
               <a href="" class="app-link link">
                 <img src="./images/freshcoffe.jpg" alt="Fresh Coffee" />
-                <h2 class="app-maintext">Fresh Coffee</h2>
-                <p class="app-paragraph">Web Site</p>
+                <div class="shadow"><h2 class="app-maintext">Fresh Coffee</h2>
+                <p class="app-paragraph">Web Site</p></div>
               </a>
             </li>
           </ul>
@@ -158,7 +159,7 @@
       <div class="container">
 
         <a href="./index.html" class="logo-footer-first link">
-          WEB <span class="logo-footer-second link">Studio</span>
+          WEB<span class="logo-footer-second link">Studio</span>
         </a>
 
         <p class="footer-paragraph">
